--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
