--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@types/marked": "^4.0.3",
     "framer-motion": "^6.2.8",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.14",
     "next": "12.1.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
